<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

      <Spinner
          android:id="@+id/spinnerProspecto"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_below="@+id/button1"
          android:prompt="@string/Prospecto" />

       <Spinner
           android:id="@+id/spinner2"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_below="@+id/spinnerProspecto"
           android:prompt="@string/Prospecto" />
       

       <TextView
           android:id="@+id/textView1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_alignParentTop="true"
           android:text="@string/Prospecto"
           android:textAppearance="?android:attr/textAppearanceMedium" />

       <Button
           android:id="@+id/button1"
           style="?android:attr/buttonStyleSmall"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_below="@+id/textView1"
           android:text="@string/Buscar" />

       <Button
           android:id="@+id/button2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentBottom="true"
           android:text="@string/Aceptar" />

       <EditText
           android:id="@+id/editText1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_above="@+id/button2"
           android:layout_alignParentLeft="true"
           android:layout_alignParentRight="true"
           android:layout_below="@+id/spinner3"
           android:ems="10"
           android:hint="@string/Observacion"
           android:inputType="textMultiLine" />

       <Button
           android:id="@+id/Cancel"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_alignParentBottom="true"
           android:layout_alignParentRight="true"
           android:layout_marginRight="14dp"
           android:text="@string/Cancelar" />

       <Spinner
           android:id="@+id/spinner3"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_alignParentLeft="true"
           android:layout_below="@+id/spinner2"
           android:prompt="@string/Prospecto"
           android:visibility="visible" />

</RelativeLayout>